// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/npm should fetch package info from custom registry 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should fetch package info from npm 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should handle no time 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "gitRef": undefined,
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should handle purl 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should replace any environment variable in npmrc 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should retry when 408 or 5xx 1`] = `null`;

exports[`api/npm should return deprecated 1`] = `
Object {
  "deprecationMessage": "On registry \`https://registry.npmjs.org/\`, the \\"latest\\" version (v0.0.2) of dependency \`foobar\` has the following deprecation notice:

\`This is deprecated\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake.",
  "deprecationSource": "npm",
  "homepage": undefined,
  "latestVersion": "0.0.2",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "isDeprecated": true,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.2",
  },
  "versions": Object {},
}
`;

exports[`api/npm should return deprecated 2`] = `
"On registry \`https://registry.npmjs.org/\`, the \\"latest\\" version (v0.0.2) of dependency \`foobar\` has the following deprecation notice:

\`This is deprecated\`

Marking the latest version of an npm package as deprecated results in the entire package being considered deprecated, so contact the package author you think this is a mistake."
`;

exports[`api/npm should return preset 1`] = `
Object {
  "rangeStrategy": "auto",
}
`;

exports[`api/npm should send an authorization header if provided 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should use NPM_TOKEN if provided 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;

exports[`api/npm should use default registry if missing from npmrc 1`] = `
Object {
  "homepage": undefined,
  "latestVersion": "0.0.1",
  "name": "foobar",
  "releases": Array [
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-06T07:21:53+02:00",
      "version": "0.0.1",
    },
    Object {
      "canBeUnpublished": false,
      "gitRef": undefined,
      "releaseTimestamp": "2018-05-07T07:21:53+02:00",
      "version": "0.0.2",
    },
  ],
  "sourceDirectory": "src/a",
  "sourceUrl": "https://github.com/renovateapp/dummy",
  "tags": Object {
    "latest": "0.0.1",
  },
  "versions": Object {},
}
`;
